fixed z-index

--- a/src/views/knowledgeMatrix/KnowledgeMatrixItem.css
+++ b/src/views/knowledgeMatrix/KnowledgeMatrixItem.css
@@ -7,6 +7,7 @@
   right: 0;
   top: 0;
   bottom: 0;
+  z-index: 110;
 }
 
 .wrapper h1 {
