--- a/src/views/sustainableDevGoals/SustainableDevGoal.css
+++ b/src/views/sustainableDevGoals/SustainableDevGoal.css
@@ -6,6 +6,7 @@
   right: 0;
   top: 0;
   bottom: 0;
+  z-index: 110;
 }
 
 .header {
